part3/302/manifests/logoutputdeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: course-exercises
  name: logoutput-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logoutput
  template:
    metadata:
      labels:
        app: logoutput
    spec:
      containers:
        - name: logoutput
          image: usermine12/dvopskube-207-logoutput
          volumeMounts:
            - name: logoutput-config-volume
              mountPath: /etc/config
      volumes:
        - name: logoutput-config-volume
          configMap:
            name: logoutput-configmap
            items:
              - key: information
                path: information.txt
